--- a/taxpert_update/pubspec.yaml
+++ b/taxpert_update/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   stroke_text: any
+  pattern_formatter: any
 
 
   # The following adds the Cupertino Icons font to your application.
